# STPostProcessing

./: Dockerfile  README.md
Limits/: LimitPlotsConfig.py  makeLimitPlots.py
Plotting/: README.md  setup.sh
Plotting/ANN/: MLP.py  MLP2.py  README.md  addMLP.py  addMLPFriendTree.py  custom_loss.py  dumpTree.py  flattenSignal.C  getData.py  makeEFakePh.C  makeJetFakePh.C  smearPhJets.C  trainMLP.py  trainMLPgam.py
Plotting/MJ/: MJ.py
Plotting/RootCore/: ChangeLog  DictPreamble.cxx  packages  (+6 more)
TheoryUnc/: README.md  calculateRelUnc.py  format.py  run.sh  xsec_kfactor.sh  xsec_kfactor_Zee_ckkw15.sh
VBFAnalysis/: CMakeLists.txt  version.cmake
VBFAnalysis/data/: PMGxsecDB_mc16_replace.txt  VJetsWeights_SUSYparam.root  f_out_total.root  f_out_total_v05.root  f_out_total_v13Loose.root  fout_v14Loose.root  fout_v15.root  fout_v20Loose.root  fout_v26Loose.root  fout_v44.root  fout_v45.root  fout_v46.root  fout_v48.root  fout_v49.root  theoretical_corrections.root  theoretical_wToz_mjj_corrections.root  uchicagoFileMap.p  uchicagoFileMapMadgraph.p  uchicagoFileMap_v13Loose.p  uchicagoFileMap_v14Loose.p  uchicagoFileMap_v15Loose.p  uchicagoFileMap_v20Loose.p  uchicagoFileMap_v26Loose.p  v42_ace.list  v42_var.list
VBFAnalysis/python/: .sample.py.swp  buildCondorScript.py  sample.py  sampleTruth.py  systematics.py  writeMultiJEleFake.py
VBFAnalysis/python/Plotting/: ATLAS.py  Style.py
VBFAnalysis/python/job_configuration/: ath_argparse.py  extended_athfile.py  job_configuration.py
VBFAnalysis/scripts/: AddVjetsSUSYParam.py  LoopOverHF.py  compareCRNF.py  correlationST.py  fitPlot.py  mergeVBFAnalysisAlg.sh  mergeVBFTruthAlg.sh  mkTable.py  postfitChi2Calculator.py  recoRun.sh  runPostfitPlot.sh  shapeMJ.py  shapeMJGam.py  submitHFInputCondor.py  submitVBFAnalysisCondor.py  submitVBFTruthCondor.py  submitVBFVjetsCondor.py  sysPlotv2.py  testDocker.sh  truthRun.sh  useMGUnc.py  yields.py
VBFAnalysis/share/: HFInputJobOptions.py  VBFAnalysisAlgJobOptions.py  VBFTruthAlgJobOptions.py  VBFVjetsAlgJobOptions.py
VBFAnalysis/src/: HFInputAlg.cxx  HFInputAlg.h  SignalSystHelper.cxx  SignalSystHelper.h  VBFAnalysisAlg.cxx  VBFAnalysisAlg.h  VBFTruthAlg.cxx  VBFTruthAlg.h  VBFVjetsAlg.cxx  VBFVjetsAlg.h  VJetsMjjSystHelper.cxx  VJetsMjjSystHelper.h  VJetsSystHelper.cxx  VJetsSystHelper.h
VBFAnalysis/src/components/: VBFAnalysis_entries.cxx  VBFAnalysis_load.cxx
VBFAnalysis/util/: MJ.py  checkduplicates.C  getN.c  getN.py  org.sh  resubmit.py  resubmit.sh  resubmitBatchCondor.sh  writeFileMap.py  writeFileMapLS.py
(+192 files in other folders)
